Sprint 1：账户 & 产品管理
